wip: added links for home, logout and login, and styling

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,6 @@
 <nav>
     <a href="/">HOME</a>
+    <a href="/logout">LOG OUT</a>
+    <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png" alt="google"></a>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
 </nav>
