--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,15 @@
 <nav>
     <a href="/">HOME</a>
-    <a href="/logout">LOG OUT</a>
+    <% if (user) { %>
+        <p><%= user.name%></p>
+        <img src="<%=user.avatar%>" alt="avatar">
+        <select name="pets">
+            <option value="pet1"><a href="">Add Pets</a></option>
+            <option value="pet2"><a href="">Add Pets</a></option>
+        </select>
+        <a href="/logout">LOG OUT</a>
+    <% } %>
+    <a href="">Profile</a>
     <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png" alt="google"></a>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </nav>
