--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,9 +7,10 @@
             <option value="pet1"><a href="">Add Pets</a></option>
             <option value="pet2"><a href="">Add Pets</a></option>
         </select>
+        <a href="/pets/new">Add Pets</a>
         <a href="/logout">LOG OUT</a>
+        <a href="/users/<%=user.id%>">Profile</a>
     <% } %>
-    <a href="">Profile</a>
     <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png" alt="google"></a>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </nav>
