adding styling for users avatar to decrease size

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,3 +12,10 @@ img[alt="google"]{
   position: relative;
   top:7px;
 }
+
+img[alt="avatar"]{
+  position: relative;
+  top: 10px;
+  width: 40px;
+  border-radius: 50px;
+}
