bug fix: age was not saving - forgot to add age on name input

--- a/views/pets/new.ejs
+++ b/views/pets/new.ejs
@@ -24,7 +24,7 @@
     </div>
     <div>
         <label for="age">Age:</label>
-        <input type="number">
+        <input type="number" name="age">
     </div>
     <div>
         <label>Birthday:</label>
