--- a/views/pets/show.ejs
+++ b/views/pets/show.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/header') %>
+<a href="/pets/<%=pet.id%>/posts/new">Create Post</a>
 <p>Name:<%= pet.name %></p>
 <p>Age: <%= pet.age %></p>
 <p>Birthday: <%= pet.birthday %></p>
