--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,3 +1,11 @@
 <%- include('../partials/header') %>
 <h1>Hello</h1>
 <h2><%= user.name %></h2>
+<% if (user.pets.length) { %>
+    <% user.pets.forEach(function(pet){ %>
+        <% console.log(pet.id) %>
+        <a href="/pets/<%=pet.id%>"><%=pet.name%></a>
+    <% })%>
+<% } else { %>
+    <p>No Pets found</p>
+<% } %>
