--- a/views/pets/post.ejs
+++ b/views/pets/post.ejs
@@ -6,3 +6,8 @@
 <p>Posted By: <%=post.author.name%></p>
 <p>Likes: <%= post.likes %> </p>
 <p>Posted At: <%=post.createdAt%></p>
+<% if(user?._id.equals(post.author.id)){ %>
+    <form action="/post/<%=post.id%>/edit">
+        <input type="submit" value="EDIT POST">
+    </form>
+<% } %> 
