created delete button for pets displaying on the user profile for users that are logged in AND creators/owners of that pet

--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -5,6 +5,14 @@
     <% user.pets.forEach(function(pet){ %>
         <% console.log(pet.id) %>
         <a href="/pets/<%=pet.id%>"><%=pet.name%></a>
+        <% if(user?._id.equals(pet.owner)){ %>
+            <%console.log('match')%>
+            <form action="/pets/<%=pet.id%>?_method=DELETE" method="POST">
+                <input type="submit" value="DELETE">
+            </form>
+        <% } else { %>
+            <%console.log('no match')%>
+        <% } %>
     <% })%>
 <% } else { %>
     <p>No Pets found</p>
