changed the path of home page to dierct to the correct page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <nav>
-    <a href="/">HOME</a>
+    <a href="/home">HOME</a>
     <% if (user) { %>
         <p><%= user.name%></p>
         <img src="<%=user.avatar%>" alt="avatar">
