--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,54 +1,58 @@
 <%- include('./partials/header') %>
-<h1>Welcome To Petpawrazzi HOME PAGE</h1>
-
-<% if(allPosts.length){ %>
-    <% allPosts.forEach(function(post){ %>
-    <table>
-        <tr>
-            <td><h3><%=post.petName.name%></h3></td>
-        </tr>
-        <tr>
-            <td><a href="<%=post.img%>"><%=post.img%></a></td>
-        </tr>
-        <tr>
-            <td>Caption: <%=post.caption%></td>
-        </tr>
-        <tr>
-            <td>Posted By: <%=post.author.name%></td>
-        </tr>
-        <tr>
-            <td>Likes: <%=post.likes%></td>
-        </tr>
-        <tr>
-            <td>Date: <%=post.createdAt%></td>
-        </tr>
-        <tr>
-            <td>
-                <p>Comments..</p>
-                <%if(post.comments.length){%>
-                    <ul>
-                        <%post.comments.forEach(function(comment){ %>
-                            <li><%=comment.content%></li>
-                            <% if(user?._id.equals(comment.author)){ %>
-                                <form action="">
-                                    <input type="submit" value="Delete">
-                                </form>
-                            <% } %>
-                        <% }) %>
-                    </ul>
-                <% } else { %>
-                    <%console.log('no comments')%>
-                <% } %>
-                <form action="posts/<%=post.id%>/comments" method="POST">
-                    <input type="hidden" name="post" value="<%=post.id%>">
-                    <input type="hidden" name="author" value="<%=post.author.id%>">
-                    <textarea name="content" cols="65" rows="10" placeholder="Add a comment"></textarea>
-                    <input type="submit" value="⬆">
-                </form>
-            </td>
-        </tr>
-    </table>
-    <% }) %>
-<% } else {%>
-    <p>No posts yet</p>
-<%}%>
+<body id="home-body">
+    <h1 id="home-header">Welcome To Petpawrazzi</h1>
+    
+    <% if(allPosts.length){ %>
+        <% allPosts.forEach(function(post){ %>
+        <table id = "home-table">
+            <tr>
+                <td id="petName-home"><h3><%=post.petName.name%></h3></td>
+            </tr>
+            <tr>
+                <td><img src="<%=post.img%>" alt="pet-pic"></td>
+            </tr>
+            <tr>
+                <td><span class="label">Caption:</span> <%=post.caption%></td>
+            </tr>
+            <tr>
+                <td><span class="label">Posted By:</span> <%=post.author.name%></td>
+            </tr>
+            <tr>
+                <td><span class="label">Likes:</span> <%=post.likes%></td>
+            </tr>
+            <tr>
+                <td>
+                    <span class="label">Date:</span> <%=post.createdAt%>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p id="comments">Comments..</p>
+                    <%if(post.comments.length){%>
+                        <ul>
+                            <%post.comments.forEach(function(comment){ %>
+                                <li><%=comment.content%></li>
+                                <% if(user?._id.equals(comment.author)){ %>
+                                    <form action="/comment/<%=comment.id%>?_method=DELETE" method="POST">
+                                        <input type="submit" value="Delete">
+                                    </form>
+                                <% } %>
+                            <% }) %>
+                        </ul>
+                    <% } else { %>
+                        <%console.log('no comments')%>
+                    <% } %>
+                    <form action="posts/<%=post.id%>/comments" method="POST">
+                        <input type="hidden" name="post" value="<%=post.id%>">
+                        <input type="hidden" name="author" value="<%=user.id%>">
+                        <textarea name="content" cols="65" rows="10" placeholder="Add a comment"></textarea>
+                        <input id="com-btn" type="submit" value="⬆">
+                    </form>
+                </td>
+            </tr>
+        </table>
+        <% }) %>
+    <% } else {%>
+        <p>No posts yet</p>
+    <%}%>
+</body>
