--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,19 +1,75 @@
 <%- include('../partials/header') %>
-<h1>Hello</h1>
-<h2><%= user.name %></h2>
-<% if (user.pets.length) { %>
+<h1 id="pro-header"><%= user.name %>, Welcome to your profile!</h1>
+<body id="pro-body">
+    <table id="pets">
+        <tr>
+            <% if (user.pets.length) { %>
+                <% user.pets.forEach(function(pet){ %>
+                    <td>
+                        <% if(user?._id.equals(pet.owner)){ %>
+                            <form action="/pets/<%=pet.id%>?_method=DELETE" method="POST">
+                                <a href="/pets/<%=pet.id%>"><%=pet.name%></a> 
+                                <input type="submit" value="Remove Pet">
+                            </form>
+                        <% } %>
+                    </td>
+            <% }) %> 
+        <% } else {%>
+            <td>No pets yet</td>
+        <%} %>
+        </tr>
+    </table>
     <% user.pets.forEach(function(pet){ %>
-        <% console.log(pet.id) %>
-        <a href="/pets/<%=pet.id%>"><%=pet.name%></a>
-        <% if(user?._id.equals(pet.owner)){ %>
-            <%console.log('match')%>
-            <form action="/pets/<%=pet.id%>?_method=DELETE" method="POST">
-                <input type="submit" value="DELETE">
-            </form>
-        <% } else { %>
-            <%console.log('no match')%>
-        <% } %>
-    <% })%>
-<% } else { %>
-    <p>No Pets found</p>
-<% } %>
+        <% pet.posts.forEach(function(post){ %>
+            <table id="pro-table">
+                <tr>
+                    <td>
+                        <h3 id="petName-pro"><%= pet.name %></h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <td id="petPic-pro" ><img src="<%=post.img%>" alt="pet-pic"></td>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Caption:<%=post.caption%>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Likes:<%=post.likes%> 
+                        <input type="submit" value="🤍">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p id="comments">Comments..</p>
+                    <%if(post.comments.length){%>
+                        <ul>
+                            <%post.comments.forEach(function(comment){ %>
+                                <li><%=comment.content%></li>
+                                <% if(user?._id.equals(comment.author)){ %>
+                                    <form action="/comment/<%=comment.id%>?_method=DELETE" method="POST">
+                                        <input type="submit" value="Delete">
+                                    </form>
+                                <% } %>
+                            <% }) %>
+                        </ul>
+                    <% } else { %>
+                        <%console.log('no comments')%>
+                    <% } %>
+                    <%console.log(post)%>
+                    <form action="/posts/<%=post.id%>/comments" method="POST">
+                        <input type="hidden" name="post" value="<%=post.id%>">
+                        <input type="hidden" name="author" value="<%=user.id%>">
+                        <textarea name="content" cols="60" rows="10" placeholder="Add comment"></textarea>
+                        <input id="com-btn-pro" type="submit" value="⬆">
+                    </form>
+                    </td>
+                </tr>
+            </table>
+            <% }) %>
+        <% }) %>
+</body>
