--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,21 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+nav{
+  border: solid black 1px;
+  display: block;
+  margin: 0 auto;
+  width: 1000px;
+  height: 100px;
+  background-color: rgb(90, 200, 200);
+  border: solid white 5px;
+  border-top: none;
+  border-radius: 16px;
+  position: relative;
+  bottom: 65px;
+  /* top: 25px; */
+}
+
 a {
   color: #00B7FF;
 }
@@ -47,6 +62,11 @@ table{
   text-decoration: none;
 }
 
+img[alt="pets-home"]{
+  display: block;
+  margin: 0 auto;
+}
+
 img[alt="pets"]{
   display: block;
   margin: 0 auto;
@@ -56,9 +76,11 @@ img[alt="pets"]{
 }
 
 #header-links{
-  /* border: solid black 5px; */
+  /* border: solid black 1px; */
   display: flex;
   justify-content: space-evenly;
+  position: relative;
+  top: 35px;
   
 }
 
@@ -72,10 +94,14 @@ img[alt="pets"]{
   border-radius: 10px;
 }
 
-#home-header, #header-new{
+#home-header{
+  position: relative;
+  bottom: 70px;
   background-color: white;
   display: block;
   margin: 0 auto;
+  border-radius: 15px;
+  /* height: 70px; */
   /* border: solid black 1px; */
   width: 600px;
   text-align: center;
@@ -83,16 +109,32 @@ img[alt="pets"]{
   margin-bottom: 15px;
 }
 
+#header-new{
+  text-align: center;
+}
+#pet-petting{
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  bottom: 55px;
+  /* border: solid black 1px; */
+  width: 100px;
+}
+
 #home-table{
   display: block;
-  border: solid white 5px;
-  width: 600px;
+  border: solid white 10px;
+  border-radius: 50px;
   margin: 0 auto;
   margin-bottom: 15px;
   background-color: rgb(90, 200, 200); /* Teal color */
   /* filter: brightness(120%);  */
   width: 800px;
   padding-left: 100px;
+}
+
+.pet-data{
+  font-weight: bold;
 }
 
 .label{
@@ -106,11 +148,15 @@ img[alt="pet-pic"]{
   width: 400px;
   position: relative;
   left: 80px;
+  border-radius: 50px;
   border: solid white 10px;
 }
 
 #home-body, #pro-body, #new-body, #showPet-body{
   background-color: teal;
+  /* background-image: url('/images/1000_F_170349417_A963T3SCwjVqCAqchfLHDtBF5yffPV2P.jpg');
+  background-size: cover; /* Optional: Adjusts the background image size */
+  /* background-position: center;  */ 
 }
 tr{
   padding: 5px;
@@ -148,6 +194,7 @@ tr{
 
 #comments{
   text-decoration:underline;
+  font-weight: 600;
 }
 
 #com-btn{
@@ -192,8 +239,6 @@ li{
   width: 400px;
   position: relative;
   right:525px;
-  /* right:1000px; */
-  /* border: solid white 10px; */
 }
 
 #com-btn-pro{
@@ -278,4 +323,230 @@ li{
   margin-top:15px;
   background-color: rgb(90, 200, 200); 
   border: solid white 5px;
+}
+
+#petName-pro{
+  /* border: solid black 1px; */
+  position: relative;
+  left: 70px;
+}
+
+#petPic-pro{
+  /* position: relative;
+  right: 1200px; */
+  border: solid white 10px;
+  display: block;
+  margin: 0 auto;
+}
+
+#pet-pro-div{
+  /* border: solid white 10px; */
+  width: 600px;
+  display: block;
+  align-items: center;
+  margin: 0 auto;
+  padding-right: 150px;
+  margin-bottom: 25px;
+  padding-bottom: 25px;
+}
+
+.pet-data-show{
+  text-align: center;
+  font-weight: 700;
+}
+
+#show-petPic{
+  width: 500px;
+  border: solid white 5px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.aTag-show{
+  /* border: solid black 1px; */
+  display: block;
+  margin: 0 auto;
+  width: 100px;
+  font-weight: 700;
+}
+
+#delete-btn{
+  border: solid black 1px;
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  left: 60px;
+  bottom: 18px;
+}
+
+#comment-div-show{
+  border: solid white 5px;
+  width: 500px;
+  border: block;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+#create-header{
+  /* border: solid black 1px; */
+  text-align: center;
+}
+
+#create-form{
+  border: solid white 5px;
+  padding: 10px;
+  margin: 0 auto;
+  width: 500px;
+}
+
+#create-img{
+  display: block;
+  margin: 0 auto;
+  /* border: solid black 1px; */
+  position: relative;
+  top: 500px;
+}
+
+.create-div{
+  /* border: solid black 1px; */
+  margin: 10px;
+}
+
+.create-div > label {
+  font-weight: 700;
+}
+
+.create-div > input {
+  width: 460px;
+  height: 25px;
+}
+
+#create-btn{
+  position: relative;
+  left: 430px;
+}
+
+#create-body{
+  background-color: teal;
+}
+
+#post-img{
+  width: 400px;
+  display: block;
+  margin: 0 auto;
+  border: solid white 10px;
+}
+
+#postPet-info{
+  border: solid white 10px;
+  display: block;
+  margin: 0 auto;
+  width: 500px;
+  padding: 10px;
+  margin-top: 15px;
+}
+
+#post-body{
+  background-color: teal;
+}
+
+.pet-data-post{
+  font-weight: 700;
+  text-align: center;
+}
+
+#edit-btn{
+  font-weight: 700;
+  border: solid black 1px;
+  display: block;
+  margin: 0 auto;
+}
+
+#edit-header{
+  /* border: solid black 1px; */
+  position: relative;
+  bottom: 30px;
+  text-align: center;
+}
+
+#edit-form{
+  border: solid white 10px;
+  width: 500px;
+  display: block;
+  margin: 0 auto;
+  height: 200px;
+}
+
+#page-btns{
+  /* border: solid black 1px; */
+  width: 160px;
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  top: 35px;
+}
+
+#page-btns > input, #page-btns > a{
+  font-weight: 700;
+}
+
+.edit-div{
+  margin: 10px;
+}
+
+.edit-div > input{
+  width: 470px;
+  height: 35px;
+}
+
+.edit-div > label{
+  font-size: larger;
+}
+
+#edit-body{
+  background-color: teal;
+}
+
+#edit-pets{
+  /* border: solid black 1px; */
+  position: relative;
+  top: 450px;
+}
+
+#home-petPic{
+  width: 400px;
+  border: solid white 10px;
+  display: block;
+  margin: 0 auto;
+}
+
+#home-petData > p{
+  /* border: solid black 1px; */
+  text-align: center;
+}
+
+#home-li{
+  font-weight: 700;
+  /* border: solid black 1px; */
+  width: 700px;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+}
+
+#comments-home > textarea{
+  border: solid white 10px;
+  display: block;
+  margin: 0 auto;
+}
+
+#comments-home > input[type="submit"]{
+  border: solid blue 5px;
+  background-color: white;
+  position: relative;
+  color: blue;
+  border-radius: 50px;
+  left: 740px;
+  bottom: 40px;
 }
