--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,58 +1,40 @@
 <%- include('./partials/header') %>
 <body id="home-body">
+    <!-- <img id="pet-petting"src="/images/200.webp" alt="pet-petting"> -->
     <h1 id="home-header">Welcome To Petpawrazzi</h1>
     
     <% if(allPosts.length){ %>
         <% allPosts.forEach(function(post){ %>
-        <table id = "home-table">
-            <tr>
-                <td id="petName-home"><h3><%=post.petName.name%></h3></td>
-            </tr>
-            <tr>
-                <td><img src="<%=post.img%>" alt="pet-pic"></td>
-            </tr>
-            <tr>
-                <td><span class="label">Caption:</span> <%=post.caption%></td>
-            </tr>
-            <tr>
-                <td><span class="label">Posted By:</span> <%=post.author.name%></td>
-            </tr>
-            <tr>
-                <td><span class="label">Likes:</span> <%=post.likes%></td>
-            </tr>
-            <tr>
-                <td>
-                    <span class="label">Date:</span> <%=post.createdAt%>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p id="comments">Comments..</p>
-                    <%if(post.comments.length){%>
-                        <ul>
-                            <%post.comments.forEach(function(comment){ %>
-                                <li><%=comment.content%></li>
-                                <% if(user?._id.equals(comment.author)){ %>
-                                    <form action="/comment/<%=comment.id%>?_method=DELETE" method="POST">
-                                        <input type="submit" value="Delete">
-                                    </form>
-                                <% } %>
-                            <% }) %>
-                        </ul>
-                    <% } else { %>
-                        <%console.log('no comments')%>
-                    <% } %>
-                    <form action="posts/<%=post.id%>/comments" method="POST">
-                        <input type="hidden" name="post" value="<%=post.id%>">
-                        <input type="hidden" name="author" value="<%=user.id%>">
-                        <textarea name="content" cols="65" rows="10" placeholder="Add a comment"></textarea>
-                        <input id="com-btn" type="submit" value="⬆">
-                    </form>
-                </td>
-            </tr>
-        </table>
-        <% }) %>
-    <% } else {%>
-        <p>No posts yet</p>
-    <%}%>
+        <div id="home-div">
+            <h3 id="petName-home"><%=post.petName.name%></h3>
+            <img id="home-petPic" src="<%=post.img%>" alt="petPic">
+            <div id="home-petData">
+                <p class="pet-data"><%=post.caption%></p>
+                <p class="pet-data">Posted By:</span> <%=post.author.name%> <span class="label">Date:</span> <%= new Date(post.createdAt).toLocaleDateString() %></p>
+                <p id="comments">Comments..</p>
+            </div>
+            <%if(post.comments.length){%>
+                <ul>
+                    <%post.comments.forEach(function(comment){ %>
+                        <form action="/comment/<%=comment.id%>?_method=DELETE" method="POST">
+                            <% if(user?._id.equals(comment.author.id)){ %>
+                                <li id="home-li"> <%=comment.author.name%>: <%=comment.content%> <input type="submit" value="Delete"></li>
+                            <% } else {%>
+                                <li> <%=comment.author.name%>: <%=comment.content%></li>
+                            <% } %>
+                        </form>
+                    <% }) %>
+                </ul>
+            <%}%>
+                <form id="comments-home" action="posts/<%=post.id%>/comments" method="POST">
+                    <input type="hidden" name="post" value="<%=post.id%>">
+                    <input type="hidden" name="author" value="<%=user.id%>">
+                    <textarea name="content" cols="65" rows="10" placeholder="Add a comment"></textarea>
+                    <input id="com-btn-home" type="submit" value="⬆">
+                </form>
+            <% }) %>
+        <% } else {%>
+            <p>No posts yet</p>
+        <%}%>
+    </div>
 </body>
