--- a/views/pets/create_post.ejs
+++ b/views/pets/create_post.ejs
@@ -1,15 +1,18 @@
 <%- include('../partials/header') %>
-<h1>Create A Post For <%=pet.name%>!</h1>
-<form action="/posts/create" method="POST">
-    <input type="hidden" name="petName" value="<%=pet.id%>">
-    <input type="hidden" name="author" value="<%=pet.owner.id%>">
-    <div>
-        <label>Photo:</label>
-        <input type="text" name="img">
-    </div>
-    <div>
-        <label>Caption:</label>
-        <input type="text" name="caption">
-    </div>
-    <input type="submit">
-</form>
+<body id="create-body">
+    <h1 id="create-header">Create A Post For <%=pet.name%>!</h1>
+    <form id="create-form" action="/posts/create" method="POST">
+        <input type="hidden" name="petName" value="<%=pet.id%>">
+        <input type="hidden" name="author" value="<%=pet.owner.id%>">
+        <div class="create-div">
+            <label>Photo:</label><br>
+            <input type="text" name="img">
+        </div>
+        <div class="create-div">
+            <label>Caption:</label><br>
+            <input type="text" name="caption">
+        </div>
+        <input id="create-btn" type="submit">
+    </form>
+    <img id="create-img" src="/images/giphy.webp" alt="pets">
+</body>
